--- a/src/schooltool/gradebook/locales/en_CA.po
+++ b/src/schooltool/gradebook/locales/en_CA.po
@@ -736,7 +736,7 @@ msgstr ""
 
 #: /src/schooltool/gradebook/browser/flourish.zcml:1154
 msgid "Reports"
-msgstr ""
+msgstr "Reports"
 
 #: /src/schooltool/gradebook/browser/flourish.zcml:1139
 msgid "Printable Worksheet"
