--- a/src/schooltool/gradebook/locales/hu.po
+++ b/src/schooltool/gradebook/locales/hu.po
@@ -992,7 +992,7 @@ msgstr "Késő"
 
 #: /src/schooltool/gradebook/browser/report_card.py:68
 msgid "A"
-msgstr ""
+msgstr "A"
 
 #: /src/schooltool/gradebook/browser/report_card.py:69
 msgid "T"
