--- a/src/schooltool/gradebook/locales/km.po
+++ b/src/schooltool/gradebook/locales/km.po
@@ -738,7 +738,7 @@ msgstr ""
 
 #: /src/schooltool/gradebook/browser/flourish.zcml:1154
 msgid "Reports"
-msgstr ""
+msgstr "របារការណ៍"
 
 #: /src/schooltool/gradebook/browser/flourish.zcml:1139
 msgid "Printable Worksheet"
