--- a/src/schooltool/gradebook/locales/lt.po
+++ b/src/schooltool/gradebook/locales/lt.po
@@ -741,7 +741,7 @@ msgstr ""
 
 #: /src/schooltool/gradebook/browser/flourish.zcml:1154
 msgid "Reports"
-msgstr ""
+msgstr "Ataskaitos"
 
 #: /src/schooltool/gradebook/browser/flourish.zcml:1139
 msgid "Printable Worksheet"
