--- a/src/schooltool/gradebook/locales/fr.po
+++ b/src/schooltool/gradebook/locales/fr.po
@@ -1558,7 +1558,7 @@ msgstr "Index"
 #: /src/schooltool/gradebook/browser/templates/f_hide_unhide_report_sheets.pt:17
 #: /src/schooltool/gradebook/browser/templates/f_worksheets.pt:11
 msgid "Visible"
-msgstr ""
+msgstr "Visible"
 
 #: /src/schooltool/gradebook/browser/templates/f_hide_unhide_course_worksheets.pt:32
 msgid "This year has no worksheets deployed."
