--- a/src/schooltool/gradebook/locales/zh_CN.po
+++ b/src/schooltool/gradebook/locales/zh_CN.po
@@ -737,7 +737,7 @@ msgstr ""
 
 #: /src/schooltool/gradebook/browser/flourish.zcml:1154
 msgid "Reports"
-msgstr ""
+msgstr "汇报"
 
 #: /src/schooltool/gradebook/browser/flourish.zcml:1139
 msgid "Printable Worksheet"
@@ -993,7 +993,7 @@ msgstr ""
 
 #: /src/schooltool/gradebook/browser/report_card.py:68
 msgid "A"
-msgstr ""
+msgstr "A"
 
 #: /src/schooltool/gradebook/browser/report_card.py:69
 msgid "T"
@@ -1967,7 +1967,7 @@ msgstr ""
 
 #: /src/schooltool/gradebook/gradebook_init.py:123
 msgid "Journal"
-msgstr ""
+msgstr "记录"
 
 #: /src/schooltool/gradebook/gradebook_init.py:124
 msgid "Lab"
