--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -8,6 +8,7 @@ CHANGES
 - get fill down back in the contextual menu (https://launchpad.net/bugs/907907)
 - Course worksheet outstanding issues (https://launchpad.net/bugs/927862)
 - tab hiding (https://launchpad.net/bugs/938810)
+- /server: top nav not highlighted, no breadcrumbs (https://launchpad.net/bugs/868435)
 
 
 2.0.2 (2012-02-02)
