i18n fixes, more new strings

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -8,8 +8,8 @@ CHANGES
 - Fill down is back in the contextual menu (https://launchpad.net/bugs/907907)
 - Course worksheet outstanding issues (https://launchpad.net/bugs/927862)
 - Tab hiding (https://launchpad.net/bugs/938810)
+- Fixes to navigation, style, i18n, tables, etc.
 - Updated translations
-- /server: top nav not highlighted, no breadcrumbs (https://launchpad.net/bugs/868435)
 
 2.0.2 (2012-02-02)
 ------------------
