Report Card Data should be Exportable (https://launchpad.net/bugs/976757)

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,6 +6,7 @@ CHANGES
 ------------------
 
 - Period order on report incorrect (https://launchpad.net/bugs/932508)
+- Report Card Data should be Exportable (https://launchpad.net/bugs/976757)
 
 
 2.0.3 (2012-03-16)
